# hr_agent

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
about/: cv_online.txt  linkedin.txt  perso.txt
hr_agent/: agent.py  build.py  chatbot.py  custom_tools.py  ui.py
